# universe-engine

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  build.bat  build.sh  devtool.sh  imgui.ini  premake5.lua  run.sh  scripts.py  unix.sh  win.bat
docs/: JOURNAL.md  NOTES.md  documentation.md
editor/: CMakeLists.txt
editor/src/: editor.cpp  editor_layer.cpp  editor_layer.hpp
forge/: premake5.lua
forge/src/: editor_layer.cpp  editor_layer.hpp  forge.cpp
sandbox/: Build-Sandbox.lua  CMakeLists.txt  Sandbox.vcxproj  imgui.ini  premake5.lua
sandbox/Source/: Sandbox.cpp
sandbox/assets/shaders/: quad.glsl  square.glsl  texture.glsl
sandbox/src/: example_layer.hpp  quad.cpp  quad.hpp  raw_quad.cpp  raw_quad.hpp  raw_textured_quad.cpp  raw_textured_quad.hpp  raw_triangle.cpp  raw_triangle.hpp  renderer2D_quad.cpp  renderer2D_quad.hpp  renderer2D_textured_quad.cpp  renderer2D_textured_quad.hpp  sandbox.cpp  sandbox2D.cpp  sandbox2D.hpp  textured_quad.cpp  textured_quad.hpp  triangle.cpp  triangle.hpp
scripts/: build_manager.py  dependency_manager.py  glfw_premake5.lua  scripts.py  stb_image.cpp
universe/: Build-Universe.lua  CMakeCache.txt  CMakeLists.txt  Universe.vcxproj  Universe.vcxproj.filters  premake5.lua
universe/src/: Universe.h  pch.hpp  uepch.cpp  uepch.h  universe.cpp  universe.h  universe.hpp
universe/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLVertexArray.cpp
universe/src/Platform/Windows/: WindowsInput.cpp
universe/src/Universe/Core/: Application.cpp  EntryPoint.h  Layer.cpp  LayerStack.cpp  Log.cpp  Log.h
universe/src/Universe/Events/: Event.h  KeyEvent.h  MouseEvent.h
universe/src/Universe/ImGui/: ImGuiLayer.cpp
universe/src/Universe/Renderer/: Buffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  VertexArray.cpp
universe/src/engine/: application.cpp  application.hpp  core.hpp  utils.hpp
universe/src/engine/Events/: ApplicationEvent.h
universe/src/engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.h
universe/src/engine/Renderer/: Buffer.cpp  Shader.cpp  Shader.h  VertexArray.h
universe/src/engine/core/: Application.h  Assert.h  Base.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Window.h  application.cpp  application.hpp  window.hpp
universe/src/engine/core/logger/: logger.cpp  logger.h  logger.hpp  loggerMacros.h
universe/src/engine/events/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
universe/src/engine/input/: glfw_input.cpp  glfw_input.hpp  input.hpp  mouse_button_codes.hpp
universe/src/engine/layers/: imgui_layer.cpp  imgui_layer.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
universe/src/engine/logger/: logger.cpp  logger.hpp
universe/src/engine/renderer/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  graphics_context.hpp  renderer.cpp  renderer.hpp  renderer_api.cpp  renderer_api.hpp  renderer_command.cpp  renderer_command.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
universe/src/engine/renderer/opengl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_context.cpp  opengl_context.hpp  opengl_renderer_api.cpp  opengl_renderer_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp
universe/src/engine/window/: glfw_window.cpp  glfw_window.hpp  glfw_window_wrapper.cpp  glfw_window_wrapper.hpp  window.cpp  window.hpp
universe/src/platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLVertexArray.h
universe/src/platform/Windows/: WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
universe/src/platform/windows/: windowsWindow.cpp  windowsWindow.hpp
universe/src/universe/: application.cpp  application.hpp
universe/src/universe/assets/: asset_manager.cpp  asset_manager.hpp
universe/src/universe/base/: assert.hpp  base.hpp  entrypoint.hpp  logger.cpp  logger.hpp  timestep.hpp
universe/src/universe/core/: assert.hpp  core.hpp  logger.cpp  logger.hpp  timestep.hpp
universe/src/universe/events/: application_event.hpp  application_events.hpp  event.hpp  events.hpp  key_codes.hpp  key_event.hpp  key_events.hpp  mouse_codes.hpp  mouse_event.hpp  mouse_events.hpp
universe/src/universe/input/: glfw_input.cpp  glfw_input.hpp  input.hpp  key_codes.hpp
universe/src/universe/inputs/: input.hpp
universe/src/universe/inputs/glfw/: glfw_input.cpp
universe/src/universe/layers/: imgui_layer.cpp  imgui_layer.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
universe/src/universe/physics/: collision.cpp  collision.hpp
universe/src/universe/renderer/: animation.cpp  animation.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  framebuffer.cpp  framebuffer.hpp  graphics_context.cpp  graphics_context.hpp  render_command.cpp  render_command.hpp  renderer.cpp  renderer.hpp  renderer2D.cpp  renderer2D.hpp  renderer_api.cpp  renderer_api.hpp  shader.cpp  shader.hpp  spritesheet.cpp  spritesheet.hpp  texture.cpp  texture.hpp  texture_atlas.cpp  texture_atlas.hpp  vertex_array.cpp  vertex_array.hpp
universe/src/universe/renderer/opengl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_context.cpp  opengl_context.hpp  opengl_framebuffer.cpp  opengl_framebuffer.hpp  opengl_graphics_context.cpp  opengl_graphics_context.hpp  opengl_renderer_api.cpp  opengl_renderer_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp
universe/src/universe/scene/: components.hpp  entity.hpp  scene.cpp  scene.hpp  world.cpp
universe/src/universe/window/: glfw_window.cpp  glfw_window.hpp  window.cpp  window.hpp
universe/src/universe/world/: world.cpp  world.hpp
